# dh-education

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
dh_education/: consts.py  main.py  settings.py
dh_education/models/: __init__.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1a24cc1e868d_create_verify_contact_token_table.py  afe9eb361832_create_user_role_access_tables.py  b5b1585bba1a_delete_user_role_assotiate_table.py  e582ee62d86e_create_contact_table.py
